mailman/mailman/tests/bounces/postfix_01.txt
From VM Tue Oct  3 18:16:48 2000
Return-Path: <mailman-developers-admin@python.org>
Delivered-To: zzzzz@mail.wooz.org
Received: from ns1.beopen.com (unknown [208.185.174.104])
	by mail.wooz.org (Postfix) with ESMTP id 0C841D37D5
	for <yyyyy@wooz.org>; Tue,  3 Oct 2000 18:08:44 -0400 (EDT)
Received: from dinsdale.python.org (dinsdale.cnri.reston.va.us [132.151.1.21])
	by ns1.beopen.com (8.9.3/8.9.3) with ESMTP id PAA65355
	for <zzzzz@beopen.com>; Tue, 3 Oct 2000 15:09:08 -0700 (PDT)
	(envelope-from mailman-developers-admin@python.org)
Received: from dinsdale.python.org (localhost [127.0.0.1])
	by dinsdale.python.org (Postfix) with ESMTP id 2EF421CDC9
	for <zzzzz@beopen.com>; Tue,  3 Oct 2000 18:07:03 -0400 (EDT)
Delivered-To: mailman-developers-admin@python.org
Received: by dinsdale.python.org (Postfix) via BOUNCE
	id 7CE611CE55; Tue,  3 Oct 2000 18:06:58 -0400 (EDT)
MIME-Version: 1.0
Content-Type: multipart/mixed;
	boundary="BDD021CF6B.970610818/dinsdale.python.org"
Message-Id: <20001003220658.7CE611CE55@dinsdale.python.org>
Errors-To: mailman-developers-owner@python.org
Precedence: bulk
List-Help: <mailto:mailman-developers-request@python.org?subject=help>
List-Post: <mailto:mailman-developers@python.org>
List-Subscribe: <http://www.python.org/mailman/listinfo/mailman-developers>, <mailto:mailman-developers-request@python.org?subject=subscribe>
List-Id: Mailman mailing list developers <mailman-developers.python.org>
List-Unsubscribe: <http://www.python.org/mailman/listinfo/mailman-developers>, <mailto:mailman-developers-request@python.org?subject=unsubscribe>
List-Archive: <http://www.python.org/pipermail/mailman-developers/>
From: MAILER-DAEMON@python.org (Mail Delivery System)
Sender: mailman-developers-owner@python.org
To: mailman-developers-admin@python.org
Subject: Undelivered Mail Returned to Sender
Date: Tue,  3 Oct 2000 18:06:58 -0400 (EDT)
X-BeenThere: mailman-developers@python.org
X-Mailman-Version: 2.0beta6

This is a MIME-encapsulated message.

--BDD021CF6B.970610818/dinsdale.python.org
Content-Description: Notification
Content-Type: text/plain

This is the Postfix program at host dinsdale.python.org.

I'm sorry to have to inform you that the message returned
below could not be delivered to one or more destinations.

For further assistance, please contact <postmaster@python.org>

If you do so, please include this problem report. You can
delete your own text from the message returned below.

			The Postfix program

<xxxxx@local.ie>: host mail.local.ie[195.7.46.14] said: 550 5.1.1
    <xxxxx@local.ie>... User unknown


--BDD021CF6B.970610818/dinsdale.python.org
Content-Description: Undelivered Message
Content-Type: message/rfc822

Received: from dinsdale.python.org (localhost [127.0.0.1])
	by dinsdale.python.org (Postfix) with ESMTP
	id BDD021CF6B; Tue,  3 Oct 2000 18:03:05 -0400 (EDT)
Delivered-To: mailman-developers@python.org
Received: from public.lists.apple.com (public.lists.apple.com [17.254.0.151])
	by dinsdale.python.org (Postfix) with ESMTP id D05861CDC9
	for <mailman-developers@python.org>; Tue,  3 Oct 2000 18:02:10 -0400 (EDT)
Received: from [17.216.27.250] (A17-216-27-250.apple.com [17.216.27.250])
	by public.lists.apple.com (8.9.1a/8.9.1) with ESMTP id PAA50322
	; Tue, 3 Oct 2000 15:09:09 -0700
Mime-Version: 1.0
Message-Id: <p04330122b60007b33216@[17.216.27.250]>
To: mailman-developers@python.org
From: Chuq Von Rospach <chuqui@plaidworks.com>
Content-Type: text/plain; charset="us-ascii" ; format="flowed"
Subject: [Mailman-Developers] broken CVS!
Sender: mailman-developers-admin@python.org
Errors-To: mailman-developers-admin@python.org
X-BeenThere: mailman-developers@python.org
X-Mailman-Version: 2.0beta6
Precedence: bulk
List-Help: <mailto:mailman-developers-request@python.org?subject=help>
List-Post: <mailto:mailman-developers@python.org>
List-Subscribe: <http://www.python.org/mailman/listinfo/mailman-developers>, <mailto:mailman-developers-request@python.org?subject=subscribe>
List-Id: Mailman mailing list developers <mailman-developers.python.org>
List-Unsubscribe: <http://www.python.org/mailman/listinfo/mailman-developers>, <mailto:mailman-developers-request@python.org?subject=unsubscribe>
List-Archive: <http://www.python.org/pipermail/mailman-developers/>
Date: Tue, 3 Oct 2000 15:01:50 -0700


I just updated to the current CVS, and it's broken:

Traceback (innermost last):
   File "/home/mailman/cron/qrunner", line 85, in ?
     from Mailman import MailList
   File "/home/mailman/Mailman/MailList.py", line 45, in ?
     from Mailman.Archiver import Archiver
   File "/home/mailman/Mailman/Archiver/__init__.py", line 17, in ?
     from Archiver import *
   File "/home/mailman/Mailman/Archiver/Archiver.py", line 33, in ?
     from Mailman import Mailbox
   File "/home/mailman/Mailman/Mailbox.py", line 43
     <<<<<<< Mailbox.py
     ^
SyntaxError: invalid syntax


-- 
Chuq Von Rospach - Plaidworks Consulting (mailto:chuqui@plaidworks.com)
Apple Mail List Gnome (mailto:chuq@apple.com)

You seem a decent fellow. I hate to die.

_______________________________________________
Mailman-Developers mailing list
Mailman-Developers@python.org
http://www.python.org/mailman/listinfo/mailman-developers

--BDD021CF6B.970610818/dinsdale.python.org--


